2013-09-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/profile.c (MagickFreeCMSTransform): Only delete the CMS
	transform if it is non-null.  If lcms returned a null transform,
	an assertion was thrown in lcms when the pointer was freed.
	Problem was reported by James Bardin.

2013-09-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/miff.c: PseudoClass format was written incorrectly in
	that sample storage size is supposed to be selected based on the
	size of the colormap, but it was being selected based on the depth
	parameter instead, leading to excessively sized files and failure
	to read what was written.  RLE compressed formats had the sense of
	the alpha channel inverted from the other compression methods, and
	contrary to the specification.  PseudoClass with Alpha was not
	supported at all, and reading a file claiming to be such caused an
	assertion to be thrown.  Note that these fixes may cause some
	existing files to no longer be read correctly.

	* coders/xpm.c (ReadXPMImage): XPM is rarely used to produce
	16-bit output.  Set image depth based on the colormap.

	* coders/tim.c (ReadTIMImage): PSX TIM is not able to produce more
	than 8-bit output, set image depth appropriately.

2013-09-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): Increase rows-per-strip as
	required to try to avoid more than 32K strips per image since some
	programs seem to use a 16-bit strip counter and fail with more
	than 32K strips.  Problem was reported by Kevin Myers.

	* magick/transform.c (MosaicImages): Fix unsigned underflow
	problem with -mosaic when page offset is negative and exceeds
	image width or height.  This problem caused assertions, out of
	memory errors, or pixel cache limit errors due to requesting an
	image of outrageous size.

2013-08-26  Jaroslav Fojtik  <JaFojtik@seznam.cz>
        * dcraw\dcraw.c Updated from autor
        * dcraw\dcraw.c.patch 
