@@ -35,6 +35,17 @@
 <div class="document">
 
 
+<p>2013-09-21  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/miff.c (ReadMIFFImage): Fixes to be able to read MIFF
+written by ImageMagick 6.X, including DirectClass grayscale
+images.  Interoperabilty is not completely assured since
+ImageMagick is not consistent with itself and may only be able to
+read the file it just wrote.  Reading DirectClass grayscale RLE
+compressed images is not supported yet.</li>
+</ul>
+</blockquote>
 <p>2013-09-16  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
