@@ -414,6 +414,7 @@ individual image (composed of a header and image data) into one file.</p>
 <div class="section" id="authors">
 <h1>Authors</h1>
 <p>John Cristy, <a class="reference external" href="mailto:magick-users&#37;&#52;&#48;imagemagick&#46;org">magick-users<span>&#64;</span>imagemagick<span>&#46;</span>org</a> ImageMagick Studio LLC.</p>
+<p>Maintained since 2002 by Bob Friesenhahn, GraphicsMagick Group.</p>
 <hr class="docutils" />
 <p>Copyright © GraphicsMagick Group 2002 - 2013</p>
 </div>
